--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -4,7 +4,7 @@
 {% endif %}
 <a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">
   {{ project.owner.username }}
-</a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+</a><span class="muted">/</span><a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
   {{ project.name }}
 </a>
 {% endmacro %}
