Adds support for celery, flask-mail, and password resets, working towards ticket #30 completion.

--- a/notifico/views/account/templates/login.html
+++ b/notifico/views/account/templates/login.html
@@ -9,8 +9,18 @@
       {{ forms.render_field(form.username) }}
       {{ forms.render_field(form.password) }}
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Login</button>
-        <a href="{{ url_for('.register') }}" class="btn">Register</a>
+        <button type="submit" class="btn btn-success">
+          <i class="icon-signin"></i> Login
+        </button>
+        or
+        <a href="{{ url_for('.register') }}" class="btn btn-primary">
+          <i class="icon-plus"></i> Sign Up
+        </a>
+        {% if config.NOTIFICO_PASSWORD_RESET %}
+        <small class="muted">
+          <a href="{{ url_for('.forgot_password') }}">Lost your password?</a>
+        </small>
+        {% endif %}
       </div>
     </form>
   </div>
