--- a/notifico/templates/no_sidebar.html
+++ b/notifico/templates/no_sidebar.html
@@ -3,6 +3,17 @@
 {% block content %}
 <div class="row-fluid content_main">
   <div class="span12 content_page">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+    <div class="contents">
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }}">
+          {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+      {% endif %}
+    {% endwith %}
     <div class="contents">
     {% block content_page %}
     {% endblock content_page %}
