Get rid of the 'or' on the login page; move forgot password link below the buttons.

--- a/notifico/views/account/templates/login.html
+++ b/notifico/views/account/templates/login.html
@@ -12,11 +12,12 @@
         <button type="submit" class="btn btn-success">
           <i class="icon-signin"></i> Login
         </button>
-        or
+        &nbsp;
         <a href="{{ url_for('.register') }}" class="btn btn-primary">
           <i class="icon-plus"></i> Sign Up
         </a>
         {% if config.NOTIFICO_PASSWORD_RESET %}
+        <br />
         <small class="muted">
           <a href="{{ url_for('.forgot_password') }}">Lost your password?</a>
         </small>
