Add icon to landing sign up button

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -11,7 +11,7 @@
   {% if not g.user %}
   <p>
     <a class="btn btn-success btn-large" href="{{ url_for('account.register') }}">
-      Sign Up
+      <i class="icon-plus"></i> Sign Up
     </a>
   </p>
   <p>
