Add icons to settings dropdown.

--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -71,18 +71,18 @@
                   <ul class="dropdown-menu">
                     <li>
                       <a href="{{ url_for('account.settings') }}">
-                        Settings
+                        <i class="icon-cog"></i> Settings
                       </a>
                     </li>
                     <li>
                       <a href="{{ url_for('account.tokens') }}">
-                        OAuth Tokens
+                        <i class="icon-key"></i> OAuth Tokens
                       </a>
                     </li>
                     <li class="divider"></li>
                     <li>
                         <a href="{{ url_for('account.logout') }}">
-                            Logout
+                            <i class="icon-signout"></i> Logout
                         </a>
                     </li>
                   </ul>
