Fix old {{ site_label }} reference.

--- a/notifico/views/account/templates/tokens.html
+++ b/notifico/views/account/templates/tokens.html
@@ -9,7 +9,7 @@
       They can simply be re-added later if you require them again.</p>
     {% if g.user.tokens.count() == 0 %}
     <div class="alert alert-info">
-      You do not have any services authenticated with {{ site_label }}.
+      You do not have any services authenticated with Notifico.
     </div>
     {% else %}
     <table class="table table-vertical table-striped">
