Renamed no_sidebar to layouts/main.html and fixed references.

--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -1,4 +1,4 @@
-{% extends "no_sidebar.html" %}
+{% extends "layouts/main.html" %}
 {% from 'ui/page.html' import render_pagination %}
 
 {% block content_page %}
