--- a/notifico/views/projects/templates/dashboard.html
+++ b/notifico/views/projects/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "no_sidebar.html" %}
+{% extends "layouts/main.html" %}
 
 {% block content_page %}
   <h2>Projects ({{ projects.count() }})</h2>
