--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -1,4 +1,4 @@
-{% extends "no_sidebar.html" %}
+{% extends "layouts/main.html" %}
 {% from "ui/page.html" import render_pagination, link_p %}
 
 {% block style %}
