--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -1,4 +1,4 @@
-{% extends "no_sidebar.html" %}
+{% extends "layouts/main.html" %}
 {% from 'ui/page.html' import render_pagination %}
 
 {% block content_page %}
