IRC: Support a network password

--- a/notifico/views/projects/templates/new_channel.html
+++ b/notifico/views/projects/templates/new_channel.html
@@ -9,6 +9,7 @@
       {{ forms.render_field(form.channel) }}
       {{ forms.render_field(form.host) }}
       {{ forms.render_field(form.port) }}
+      {{ forms.render_field(form.password) }}
       {{ forms.render_field(form.ssl) }}
       {{ forms.render_field(form.public) }}
       <div class="form-actions">
