--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -95,6 +95,7 @@
           <th>Channel</th>
           <th>Host</th>
           <th>Port</th>
+          <th>Network Password</th>
           <th>SSL</th>
           {% if can_modify %}
           <th style="text-align: center;">Public</th>
@@ -108,6 +109,7 @@
           <td>{{ channel.channel }}</td>
           <td>{{ channel.host }}</td>
           <td>{{ channel.port }}</td>
+          <td><i class="icon-{% if channel.password %}ok{% else %}remove{% endif %}"></i></td>
           <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
           {% if can_modify %}
           <td style="text-align: center;">
