--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -1,79 +1,119 @@
 {% extends "layouts/main.html" %}
 
 {% block content_page %}
-<div class="landing-unit">
-  <h1 class="landing-unit-title">Notifico</h1>
-  <p class="lead">
-    Notifico is an <a href="https://github.com/TkTech/notifico">open-source</a> replacement
-    for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives 
-    messages from services and scripts and delivers them to IRC channels.
+
+<main class="bg-light p-5 rounded mb-3">
+  <h1>Notifico</h1>
+  <p>
+    {% trans %}
+    Notifico is a developer-focused tool that bridges all your favorite tools
+    (Github, JIRA, Gitlab, Jenkins, and more) to your favorite chat service (IRC,
+    Matrix).
+    {% endtrans %}
   </p>
   {% if not g.user %}
   <p>
     <a class="btn btn-success btn-large" href="{{ url_for('account.register') }}">
-      <i class="icon-plus"></i> Sign Up
+      <i class="icon-plus"></i> {{ _("Sign Up") }}
     </a>
   </p>
   <p>
     <small class="muted">
-      Already have an account? <a href="{{ url_for('account.login') }}">Login</a> instead.
+      {% trans login_url=url_for("account.login") %}
+      Already have an account? <a href="{{ login_url }}">Login</a> instead.
+      {% endtrans %}
     </small>
   </p>
   {% endif %}
-</div>
-<div class="row-fluid">
-  <div class="span6">
-    {# Show recently sent messages from public channels. #}
-    <h3>Newest Projects</h3>
-    <div class="section-content">
-      <table class="table table-striped table-vertical table-bordered">
-        <thead>
-          <tr>
-            <th>Created</th>
-            <th>Name</th>
-            <th>Messages</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for project in new_projects.items %}
-          <tr>
-            <td nowrap>{{ project.created|pretty_date }}</td>
-            <td style="width: 100%;">
-              {{ repo_link(project) }}
-            </td>
-            <td style="text-align: center;">{{ project.message_count }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
+</main>
+
+{# Short "sell points" #}
+<div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h5 class="card-title">
+          {{ _("100%% Open Source") }}
+        </h5>
+        <p class="card-text">
+          {% trans %}
+          Notifico is available under the MIT license, and is very easy to
+          self-host. Notifico has been open source for 8+ years and isn't going
+          anywhere.
+          {% endtrans %}
+        </p>
+      </div>
     </div>
   </div>
-  <div class="span6">
-    <h3>Top Networks</h3>
-    <div class="section-content">
-      <table class="table table-striped table-vertical table-bordered">
-        <thead>
-          <tr>
-            <th>Host</th>
-            <th>Channels</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for network, count in top_networks %}
-          <tr>
-            <td style="width: 100%;">{{ network }}</td>
-            <td  nowrap style="text-align: center;">
-              <a href="{{ url_for('.network', network=network) }}">
-                {{ count }}
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <a class="btn btn-info" href="{{ url_for('.networks') }}">See All {{ total_networks }} Networks</a>
+
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h5 class="card-title">
+          {{ _("GitHub, GitLab, Bitbucket, and more") }}
+        </h5>
+        <p class="card-text">
+          {% trans %}
+          Notifico supports the most common tools out of the box.
+          {% endtrans %}
+        </p>
+      </div>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <h3>{{ _("Newest Projects") }}</h3>
+    <table class="table table-striped table-vertical table-bordered">
+      <thead>
+        <tr>
+          <th>{{ _("Created") }}</th>
+          <th>{{ _("Name") }}</th>
+          <th>{{ _("Messages") }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for project in new_projects.items %}
+        <tr>
+          <td nowrap>{{ project.created|pretty_date }}</td>
+          <td style="width: 100%;">
+            {{ repo_link(project) }}
+          </td>
+          <td class="text-center">{{ project.message_count }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a class="btn btn-info" href="{{ url_for('.projects') }}">
+      {{ _("See All %(total)s Projects", total=new_projects.total) }}
+    </a>
+  </div>
+  <div class="col">
+    <h3>{{ _("Top IRC Networks") }}</h3>
+    <table class="table table-striped table-vertical table-bordered">
+      <thead>
+        <tr>
+          <th>{{ _("Host") }}</th>
+          <th>{{ _("Channels") }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for network, count in top_networks %}
+        <tr>
+          <td style="width: 100%;">{{ network }}</td>
+          <td nowrap class="text-center">
+            <a href="{{ url_for('.network', network=network) }}">
+              {{ count }}
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a class="btn btn-info" href="{{ url_for('.networks') }}">
+      {{ _("See All %(total)s Networks", total=total_networks) }}
+    </a>
   </div>
 </div>
 {% endblock %}
