Bootstrap5 project listing, add translation markers.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -77,7 +77,7 @@
         {% for project in new_projects.items %}
         <tr>
           <td nowrap>{{ project.created|pretty_date }}</td>
-          <td style="width: 100%;">
+          <td class="w-100">
             {{ repo_link(project) }}
           </td>
           <td class="text-center">{{ project.message_count }}</td>
@@ -101,7 +101,7 @@
       <tbody>
         {% for network, count in top_networks %}
         <tr>
-          <td style="width: 100%;">{{ network }}</td>
+          <td class="w-100">{{ network }}</td>
           <td nowrap class="text-center">
             <a href="{{ url_for('.network', network=network) }}">
               {{ count }}
