--- a/notifico/templates/ui/page.html
+++ b/notifico/templates/ui/page.html
@@ -1,23 +1,27 @@
 {% macro render_pagination(pg, endpoint) %}
-  <div class="pagination">
-    <ul>
+  <nav aria-label="{{ _("Result pages") }}">
+    <ul class="pagination">
       {% for page in pg.iter_pages() %}
         {% if page %}
-          <li {% if page == pg.page %}class="active"{% endif %}>
-            <a href="{{ url_for(endpoint, page=page, **kwargs) }}">{{ page }}</a>
+          <li class="page-item {% if page == pg.page %}active{% endif %}">
+            <a class="page-link" href="{{ url_for(endpoint, page=page, **kwargs) }}">
+              {{ page }}
+            </a>
           </li>
         {% else %}
-          <li class="disabled"><span>...</span></li>
+          <li class="page-item disabled">
+            <span class="page-link">...</span>
+          </li>
         {% endif %}
       {% endfor %}
     </ul>
-  </div>
+  </nav>
 {% endmacro %}
 
 {% macro link_p(project) %}
-<a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">
-  {{ project.owner.username }}
-</a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
-  {{ project.name }}
-</a>
+  <a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">
+    {{ project.owner.username }}
+  </a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+    {{ project.name }}
+  </a>
 {% endmacro %}
