--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -2,24 +2,30 @@
 {% from 'ui/page.html' import render_pagination %}
 
 {% block content_page %}
-  <h3>All Projects</h3>
+  <h3>{{ _("All Projects") }}</h3>
+  <p>
+    {% trans total=pagination.total %}
+    You can see all the projects on Notifico that the owner has marked as public.
+    There are currently {{ total }} public projects.
+    {% endtrans %}
+  </p>
   <div class="section-content">
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th>Created</th>
-          <th>Name</th>
-          <th>Messages</th>
+          <th>{{ _("Created") }}</th>
+          <th>{{ _("Name") }}</th>
+          <th>{{ _("Messages") }}</th>
         </tr>
       </thead>
       <tbody>
         {% for project in pagination.items %}
         <tr>
           <td nowrap>{{ project.created|pretty_date }}</td>
-          <td style="width: 100%;">
+          <td class="w-100">
             {{ repo_link(project) }}
           </td>
-          <td style="text-align: center;">{{ project.message_count }}</td>
+          <td class="text-center">{{ project.message_count }}</td>
         </tr>
         {% endfor %}
       </tbody>
