Scrub a-rub-dub we're starting from scratch.

--- a/notifico/templates/body.html
+++ b/notifico/templates/body.html
@@ -2,9 +2,9 @@
 {% if not project.public %}
 <i class="icon-lock"></i>
 {% endif %}
-<a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">{{ project.owner.username }}</a>
+<a href="{{ project.owner.dashboard_url }}">{{ project.owner.username }}</a>
 <span class="muted">/</span>
-<a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">{{ project.name }}</a>
+<a href="{{ project.details_url }}">{{ project.name }}</a>
 {% endmacro %}
 {% macro active(end) %}
 {% if request.endpoint.startswith(end) %}active{% endif %}
@@ -15,8 +15,9 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page_title|default('Notifico!') }}</title>
-
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/all.min.css" rel="stylesheet">
+    <link href="/css/base.css" rel="stylesheet">
     {% block style %}
     {% endblock style %}
 
