--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -9,7 +9,7 @@
     public channel exists. There are currently {{ total }} public networks.
     {% endtrans %}
   </p>
-  <table class="table table-striped table-vertical table-bordered">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>{{ _("Host") }}</th>
