--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -10,7 +10,7 @@
     {% endtrans %}
   </p>
   <div class="section-content">
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th>{{ _("Created") }}</th>
