--- a/notifico/templates/ui/forms.html
+++ b/notifico/templates/ui/forms.html
@@ -1,23 +1,33 @@
 {% macro render_field(field) %}
-<div class="control-group {% if field.errors %}error{% endif %}">
-    <label for="{{ field.id }}" class="control-label">
+<div class="mb-3 {% if field.errors %}text-danger{% endif %}">
+    {% if field.type == 'BooleanField' %}
+    <div class="form-check form-switch">
+        {{ field(class_="form-check-input", **kwargs)|safe }}
+        <label for="{{ field.id }}" class="form-check-label">
+            {{ field.label.text }}
+            {% if field.flags.required %}
+            <span class="text-danger required">*</span>
+            {% endif %}
+        </label>
+    </div>
+    {% else %}
+    <label for="{{ field.id }}" class="form-label">
         {{ field.label.text }}
         {% if field.flags.required %}
-        <span class="required">*</span>
+        <span class="text-danger required">*</span>
         {% endif %}
     </label>
-    <div class="controls">
-        {{ field(**kwargs)|safe }}
-        {% if field.errors %}
-        {% for error in field.errors %}
-        <span class="help-inline">{{ error }}</span>
-        {% endfor %}
-        {% endif %}
-        {% if field.description %}
-        <span class="help-block" style="color: black;">
-            {{ field.description|safe }}
-        </span>
-        {% endif %}
-    </div>
+    {{ field(class_="form-control", **kwargs)|safe }}
+    {% endif %}
+    {% if field.errors %}
+    {% for error in field.errors %}
+    <span class="form-text">{{ error }}</span>
+    {% endfor %}
+    {% endif %}
+    {% if field.description %}
+    <span class="form-text text-muted">
+        {{ field.description|safe }}
+    </span>
+    {% endif %}
 </div>
 {% endmacro %}
