--- a/notifico/views/projects/templates/dashboard.html
+++ b/notifico/views/projects/templates/dashboard.html
@@ -1,52 +1,57 @@
 {% extends "layouts/main.html" %}
 
 {% block content_page %}
-  <h2>Projects ({{ projects.count() }})</h2>
-  <div class="section-content">
-    {% if not projects.count() %}
-      <div class="alert alert-block">
-        {% if is_owner %}
-        You have not created any projects yet.
-        {% else %}
-        This user does not have any public projects.
-        {% endif %}
-      </div>
-    {% else %}
-      {% for project in projects %}
-      <div class="project">
-        {% if not project.public %}
-        <i class="icon-lock icon-2x pull-left icon-muted"></i>
-        {% endif %}
-        <div class="pull-left">
-          <div class="name">
-            <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
-              {{ project.name }}
-            </a>
-          </div>
-          <div class="desc">
-            <small>
-              <ul class="unstyled inline">
-                <li>Created {{ project.created|pretty_date }}</li>
-                {% if is_owner %}
-                <li><a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}"><i class="icon-pencil"></i> Edit</a></li>
-                <li><a href="{{ url_for('.delete_project', u=user.username, p=project.name) }}"><i class="icon-trash icon-white"></i> Delete</a></li>
-                {% endif %}
-              </ul>
-           </small>
-          </div>
-        </div>
-        <div class="metric pull-right">
-          <i class="icon-envelope"></i> {{ project.message_count }}
-        </div>
-        <div class="clearfix"></div>
-      </div>
-      {% endfor %}
-    {% endif %}
-    {% if is_owner %}
-    <a href="{{ url_for('.new') }}" class="btn btn-success"><i class="icon-plus"></i> New Project</a>
-    {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
-      <a href="{{ url_for('pimport.github') }}" class="btn btn-info"><i class="icon-github-alt"></i> Sync With Github</a>
-    {% endif %}
-    {% endif %}
+<div class="ex-header mb-3">
+  <div class="container">
+    <h1>{{ _("Projects") }}</h1>
   </div>
+</div>
+
+<div class="container">
+  <p>
+  {% trans %}
+  A project is a collection of webhooks and channels that will be linked
+  together. A single project can handle any number of services (such as
+  Github and JIRA) going to any number of destinations.
+  {% endtrans %}
+  </p>
+
+  <a class="btn btn-success text-decoration-none mb-3" href="{{ url_for("projects.new") }}">
+    <i class="fas fa-plus"></i>
+    {{ _("Add a new project") }}
+  </a>
+
+  <div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
+    {% for project in projects %}
+    <div class="col">
+      <div class="card h-100 {{ "border-success" if project.health else "border-warning" }}" >
+        <div class="card-body">
+          <h5 class="card-title d-flex justify-content-between">
+            <a href="{{ project.details_url }}">
+              {{ project.name|truncate(18, True) }}
+            </a>
+        <div class="btn-group">
+          <a href="{{ project.edit_url }}" class="btn btn-sm btn-outline-secondary">
+            {{ _("Edit") }}
+          </a>
+          <a href="{{ project.delete_url }}" class="btn btn-sm btn-outline-secondary">
+            {{ _("Delete") }}
+          </a>
+        </div>
+          </h5>
+        </div>
+        <div class="card-footer">
+          {% if project.last_message_received %}
+          Last used {{ project.last_message_received|pretty_date }}
+          {% else %}
+          <small class="text-muted">
+            {{ _("No messages received.") }}
+          </small>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
