--- a/notifico/views/projects/templates/edit_project.html
+++ b/notifico/views/projects/templates/edit_project.html
@@ -2,7 +2,13 @@
 {% import "ui/forms.html" as forms %}
 
 {% block content_page %}
-  <h2>Edit Project</h2>
+<div class="ex-header mb-3">
+  <div class="container">
+    <h1>{{ _("Edit Project") }}</h1>
+  </div>
+</div>
+
+<div class="container">
   <div class="section-content">
     <form class="form form-horizontal" method='POST' action="{{ request.url }}">
       {{ form.hidden_tag() }}
@@ -10,9 +16,12 @@
       {{ forms.render_field(form.website ) }}
       {{ forms.render_field(form.public) }}
       <div class="form-actions">
-        <button type="submit" class="btn btn-success">Save Changes</button>
-        <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
+        <button type="submit" class="btn btn-success">{{ _("Save Changes") }}</button>
+        <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-secondary">
+          {{ _("Cancel") }}
+        </a>
       </div>
     </form>
   </div>
+</div>
 {% endblock %}
