--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -2,136 +2,93 @@
 {% import "ui/forms.html" as forms %}
 
 {% block content_page %}
-  <h2>{{ repo_link(project) }}</h2>
-  <ul class="unstyled">
-    <li>
-      <i class="icon-time"></i> Created {{ project.created|pretty_date }}
-    </li>
-    {% if project.website %}
-    <li>
-      <i class="icon-globe"></i>
-      {{ project.website|fix_link|urlize(80, true) }}
-    </li>
-    {% endif %}
-  </ul>
+<div class="ex-header">
+  <div class="container">
+    <h1>{{ project.owner.username }}/{{ project.name }}</h1>
+  </div>
+</div>
 
-{% if can_modify %}
-  <a id="hooks"></a>
-  <h2>Message Hooks</h2>
-  <div class="section-content">
-    <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. Hooks receive messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
-    {% if not project.hooks.count() %}
-    <div class="alert alert-block">
-      You haven't created any hooks yet for this project.
-    </div>
-    {% else %}
-    <table class="table table-vertical table-striped">
-      <thead>
-        <tr>
-          <th>Service Name</th>
-          <th>Hook URL</th>
-          <th>Created</th>
-          <th style="text-align: center;">Messages</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for hook in project.hooks %}
-        <tr>
-          <td>{{ hook.hook.SERVICE_NAME }}</td>
-          <td>
-            {% if hook.absolute_url() %}
-            <a href="{{ hook.absolute_url() }}">
-            {% else %}
-            <a href="{{ url_for('.hook_receive', pid=project.id, key=hook.key) }}">
-            {% endif %}
-              Link
-            </a>
-          </td>
-          <td>
-            {{ hook.created.strftime("%Y-%m-%d") }}
-          </td>
-          <td style="text-align: center;">
-            {{ hook.message_count }}
-          </td>
-          <td>
-            <div class="pull-right">
-              <a href="{{ url_for('.edit_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-small">
-                <i class="icon-pencil"></i> Edit Hook
-              </a>
-              <a href="{{ url_for('.delete_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-small btn-danger">
-                <i class="icon-trash icon-white"></i> Delete
-              </a>
-            </div>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    {% endif %}
-    {% if can_modify %}
-    <a href="{{ url_for('.new_hook', p=project.name, u=user.username) }}" class="btn btn-success">
-      <i class="icon-plus"></i> Create New Hook
+<div class="container p-3">
+  <h2>{{ _("Providers") }}</h2>
+  <p>
+    {% trans %}
+    Providers are the sources of messages for your project.
+    {% endtrans %}
+  </p>
+  <a class="btn btn-success text-decoration-none mb-3" href="#">
+    <i class="fas fa-plus"></i>
+    {{ _("Add a new provider") }}
+  </a>
+</div>
+
+<div class="zebra-section">
+  <div class="container p-3">
+    <h2>{{ _("Channels") }}</h2>
+    <p>
+      {% trans %}
+      Channels are the destinations for your project's messages. They can be
+      IRC channels, Discord channels, and more.
+      {% endtrans %}
+    </p>
+    <a class="btn btn-success text-decoration-none mb-3" href="#">
+      <i class="fas fa-plus"></i>
+      {{ _("Add a new channel") }}
     </a>
-    {% endif %}
   </div>
-{% endif %}
+</div>
+
+<div class="container p-3">
+  <h2>{{ _("Logs") }}</h2>
+  <p>
+    {% trans %}
+    See everything that has happened recently with your project.
+    {% endtrans %}
+  </p>
+  <small class="text-info">{{ _("Nothing has happened yet.") }}</small>
+</div>
+
 {#
-  Anyone can see what channels the project is announced to, so
-  long as they're marked public.
-#}
-  <a id="channels"></a>
-  <h2>IRC Channels</h2>
-  <div class="section-content">
-    <p>Any messages received by this project will be forwarded to any of the IRC channels that have been added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
-    {% if not visible_channels.count() %}
-    <div class="alert alert-block">
-      No public channels have been added to this project.
+<h2>{{ _("Channels") }}</h2>
+<p>
+  {% trans %}
+  Any messages received by this project will be forwarded to all of the
+  channels that have been added to it.
+  {% endtrans %}
+</p>
+<a class="btn btn-success text-decoration-none mb-3" href="{{ project.new_channel_url }}">
+  <i class="fas fa-plus"></i>
+  {{ _("Add a new channel") }}
+</a>
+<div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
+  {% for channel in project.channels %}
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-header">
+        <i class="fas fa-comment-alt"></i> IRC
+      </div>
+      <div class="card-body">
+        <h5 class="card-title d-flex justify-content-between">
+          <span>
+            {{ channel.channel|truncate(18, True) }}
+          </span>
+          <div class="btn-group">
+            <a href="{{ channel.delete_url }}" class="btn btn-sm btn-outline-secondary">
+              {{ _("Delete") }}
+            </a>
+          </div>
+        </h5>
+        <div class="card-text">
+          {{ channel.channel }}@{{ channel.host }}:{{ channel.port }}.
+        </div>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">
+          {{ _("No messages sent.") }}
+        </small>
+      </div>
     </div>
-    {% else %}
-    <table class="table table-striped table-vertical">
-      <thead>
-        <tr>
-          <th>Channel</th>
-          <th>Host</th>
-          <th>Port</th>
-          <th>SSL</th>
-          {% if can_modify %}
-          <th style="text-align: center;">Public</th>
-          <th></th>
-          {% endif %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for channel in visible_channels %}
-        <tr>
-          <td>{{ channel.channel }}</td>
-          <td>{{ channel.host }}</td>
-          <td>{{ channel.port }}</td>
-          <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
-          {% if can_modify %}
-          <td style="text-align: center;">
-            <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
-          </td>
-          <td>
-            <div class="pull-right">
-              <div class="pull-right">
-              <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-small btn-danger">
-                <i class="icon-trash icon-white"></i> Delete
-              </a>
-            </div>
-            </div>
-          </td>
-          {% endif %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    {% endif %}
-    {% if can_modify %}
-    <a href="{{ url_for('.new_channel', p=project.name, u=user.username) }}" class="btn btn-success">
-      <i class="icon-plus"></i> Add New Channel
-    </a>
-    {% endif %}
   </div>
+  {% endfor %}
+</div>
+#}
 {% endblock %}
